# AI_Diplomacy

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
ai_animation/: .gitignore  package-lock.json  package.json  vitest.config.ts
ai_animation/src/: config.ts  gameState.ts  main.js  phase.ts
ai_animation/tests/helpers/: setup.ts
ai_animation/tests/unit/: config.test.ts
ai_animation/tests/unit/dom/: chat-windows.test.ts
ai_animation/tests/unit/game-state/: game-loading.test.ts  phase-transition.test.ts  simplified-phase.test.ts
ai_animation/tests/unit/map/: map-creation.test.ts
ai_animation/tests/unit/orders/: order-parsing.test.ts
ai_animation/tests/unit/units/: unit-animations.test.ts  unit-creation.test.ts
ai_diplomacy/: agent.py  clients.py  game_history.py  initialization.py  main.py  narrative.py  negotiations.py  planning.py  possible_order_context.py  prompt_constructor.py  pyproject.toml  utils.py
app/: package-lock.json  package.json
app/src/: App.css  App.tsx  main.js  scene.ts
app/src/map/: initMap.ts
bot_client/: WEBSOCKET_CLIENT_README.md  config.py  lm_game_websocket.py  main.py  models.py  multi_bot_launcher.py  pyproject.toml  single_bot_player.py  typed_websocket_client.py  websocket_client_example.py  websocket_diplomacy_client.py
bot_client/tests/: conftest.py  test_fake_websocket_server.py  test_websocket_client.py
diplomacy/web/src/gui/pages/: content_game.jsx
twitch-streamer/: README.md  entrypoint.sh
