[project]
name = "ai-diplomacy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "loguru>=0.7.3",
    "diplomacy",
]

[tool.uv.sources]
diplomacy = { path = "../diplomacy", editable = true }
